facets are broken in CLP page - Fixed

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
@@ -302,6 +302,8 @@
 				
 				.facetList{
 					.facet{
+                        clear: both;
+                        
 						border-bottom:1px solid #f5f5f5;
 						.facetHead{
 							cursor:pointer;
